--- a/package.json
+++ b/package.json
@@ -11,14 +11,16 @@
   },
   "dependencies": {
     "axios": "^1.6.7",
+    "jwt-decode": "^4.0.0",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.12.0",
-    "react-router-dom": "^6.21.1",
+    "react-router-dom": "^6.21.3",
     "recharts": "^2.10.4",
-    "sort-by": "^1.2.0"
+    "sort-by": "^1.2.0",
+    "universal-cookie": "^7.0.2"
   },
   "devDependencies": {
     "@types/react": "^18.2.43",
